clang/test/BSC/Negative/OwnedStruct/destructor/destructor_body_undeclared_deref.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Regression: after parsing an _Owned struct, DesugarDestructor runs BSC dataflow.
// Destructor bodies with invalid lvalues (`*b`, `c[0]` with undeclared names) must
// not run borrow-check on a broken Path (would crash in Path::prefixes).

_Owned struct a {
  ~a(a this) {
    *b // expected-error {{expected ';' after expression}} expected-error {{use of undeclared identifier 'b'}}
  }
};

_Owned struct b {
  ~b(b this) {
    c[0]; // expected-error {{use of undeclared identifier 'c'}}
  }
};
